<resources>
    <string name="app_name">HomeStorage</string>
    <string name="log_in">Log In</string>
    <string name="register">Sign Up</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="storage_systems">Storages</string>
    <string name="profile">Profile</string>
    <string name="categories">Categories</string>
    <string name="add">Add</string>
    <string name="edit">Edit</string>
    <string name="open">Open</string>
    <string name="get_link">Get Link</string>
    <string name="add_by_link">Add By Link</string>
    <string name="increment">Increment</string>
    <string name="decrement">Decrement</string>
    <string name="loading">Loading...</string>
    <string name="storage_system_link">Storage Link</string>
    <string name="username">Username</string>
    <string name="edit_any">Edit Any</string>
    <string name="delete">Delete</string>
    <string name="delete_any">Delete Any</string>
    <string name="admin">Admin</string>
    <string name="admin_any">Admin Any</string>
    <string name="item_name">Name</string>
    <string name="item_count">Count</string>
    <string name="search_menu">Search Menu</string>
    <string name="back">Back</string>
    <string name="create">Create</string>
    <string name="storage_name">Cell Name</string>
    <string name="category_name">Category Name</string>
    <string name="filters">Filters</string>
    <string name="filter">Filter</string>
    <string name="open_by_qr_code">Open by QR-code</string>
    <string name="open_by_nfc">Open by NFC</string>
    <string name="empty_name_field">Empty name field!</string>
    <string name="empty_link_field">Empty link field!</string>
    <string name="text_copied_to_clipboard">Text copied to clipboard!</string>
    <string name="category_add_auto">Category</string>
    <string name="item_add_auto">Item</string>
    <string name="storage_system_name">Storage Name</string>
    <string name="empty_email_field">Empty email field!</string>
    <string name="empty_password_field">Empty password field!</string>
    <string name="empty_username_field">Empty username field!</string>
    <string name="registration_error">Account with this email already exists!</string>
    <string name="log_in_error">Your mail or password not right!</string>
    <string name="wrong_link_format">Wrong link format!</string>
    <string name="qr_code_saved_in_downloads">QR code saved in downloads!</string>
    <string name="you_have_not_enough_access_rights">You have not enough access rights!</string>
    <string name="password_confirmation">Password confirmation</string>
    <string name="password_mismatch">Password mismatch!</string>
</resources>