<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="?colorPrimary">


    <LinearLayout
        android:layout_width="360dp"
        android:layout_height="400dp"
        android:padding="30dp"
        android:gravity="center"
        android:orientation="vertical">

        <CheckBox
            android:id="@+id/add"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add" />

        <CheckBox
            android:id="@+id/edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/edit" />

        <CheckBox
            android:id="@+id/edit_any"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/edit_any" />

        <CheckBox
            android:id="@+id/delete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/delete" />

        <CheckBox
            android:id="@+id/delete_any"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/delete_any" />

        <CheckBox
            android:id="@+id/admin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/admin" />

        <CheckBox
            android:id="@+id/admin_any"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/admin_any" />
    </LinearLayout>

</FrameLayout>