<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:padding="30dp"
    android:orientation="vertical"
    tools:context=".activities.RegistrationActivity">

    <com.google.android.material.textfield.TextInputLayout
        style="@style/HomeStorage.TextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginVertical="20dp"
        android:hint="@string/username"
        app:endIconMode="clear_text">

        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:autofillHints="username"
            android:ems="10"
            android:inputType="textPersonName"
            android:padding="10dp"
            android:textSize="20sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/HomeStorage.TextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginVertical="20dp"
        android:hint="@string/email"
        app:endIconMode="clear_text">

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:autofillHints="emailAddress"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:textSize="20sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/HomeStorage.TextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginVertical="20dp"
        android:hint="@string/password"
        app:endIconMode="password_toggle">

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:autofillHints="password"
            android:ems="10"
            android:inputType="textPassword"
            android:padding="10dp"
            android:textSize="20sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/HomeStorage.TextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginVertical="20dp"
        android:hint="@string/password_confirmation"
        app:endIconMode="password_toggle">

        <EditText
            android:id="@+id/password_confirmation"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:autofillHints="password"
            android:ems="10"
            android:inputType="textPassword"
            android:padding="10dp"
            android:textSize="20sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        style="@style/HomeStorage.Button"
        android:id="@+id/register_button"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginVertical="20dp"
        android:text="@string/register"
        android:textSize="20sp" />
</LinearLayout>