<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="30dp"
    tools:context=".activities.LoginActivity">


    <ImageView
        android:id="@+id/logo"
        android:layout_width="200dp"
        android:layout_height="203dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/closet"
        android:background="@drawable/logo_rect"
        app:layout_constraintBottom_toTopOf="@+id/frame"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/frame"
        android:layout_width="match_parent"
        android:layout_height="450dp"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.textfield.TextInputLayout
            style="@style/HomeStorage.TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginVertical="20dp"
            android:hint="@string/email"
            app:endIconMode="clear_text">

            <EditText
                style="@style/HomeStorage.TextInputEditText"
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:autofillHints="emailAddress"
                android:ems="10"
                android:inputType="textEmailAddress"
                android:padding="10dp"
                android:textSize="20sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/HomeStorage.TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginVertical="20dp"
            android:hint="@string/password"
            app:endIconMode="password_toggle">

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:autofillHints="password"
                android:ems="10"
                android:inputType="textPassword"
                android:padding="10dp"
                android:textSize="20sp" />
        </com.google.android.material.textfield.TextInputLayout>


        <Button
            style="@style/HomeStorage.Button"
            android:id="@+id/log_in"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginVertical="20dp"
            android:contentDescription="@string/log_in"
            android:padding="10dp"
            android:text="@string/log_in"
            android:textSize="20sp" />

        <Button
            style="@style/HomeStorage.Button"
            android:id="@+id/register"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginVertical="20dp"
            android:contentDescription="@string/register"
            android:padding="10dp"
            android:text="@string/register"
            android:textSize="20sp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>