<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.ProfileFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@drawable/top"
            android:gravity="center"
            android:text="@string/profile"
            android:textSize="20sp" />

        <ImageView
            android:id="@+id/logo"
            android:layout_width="200dp"
            android:layout_height="203dp"
            android:background="@drawable/logo_rect"
            android:contentDescription="@string/app_name"
            android:src="@drawable/closet"
            android:layout_gravity="center"
            android:layout_margin="30dp"/>

        <LinearLayout
            android:id="@+id/frame"
            android:layout_width="match_parent"
            android:layout_height="450dp"
            android:orientation="vertical"
            android:layout_margin="30dp">

            <com.google.android.material.textfield.TextInputLayout
                style="@style/HomeStorage.TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_marginVertical="20dp"
                android:hint="@string/username"
                app:endIconMode="clear_text">

                <EditText
                    style="@style/HomeStorage.TextInputEditText"
                    android:id="@+id/username"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:autofillHints="emailAddress"
                    android:ems="10"
                    android:enabled="false"
                    android:inputType="textEmailAddress"
                    android:padding="10dp"
                    android:textSize="20sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/HomeStorage.TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_marginVertical="20dp"
                android:hint="@string/email"
                app:endIconMode="clear_text">

                <EditText
                    style="@style/HomeStorage.TextInputEditText"
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:autofillHints="emailAddress"
                    android:ems="10"
                    android:enabled="false"
                    android:inputType="textEmailAddress"
                    android:padding="10dp"
                    android:textSize="20sp" />
            </com.google.android.material.textfield.TextInputLayout>



        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>