<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <com.google.android.material.appbar.MaterialToolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/top"
        android:elevation="4dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">
            <ImageView
                android:id="@+id/back"
                android:contentDescription="@string/back"
                android:src="@drawable/arrow_back"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="10dp"/>
            <SearchView
                android:id="@+id/search"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:maxHeight="50dp"
                android:layout_weight="7"
                android:layout_margin="10dp"
                android:searchIcon="@drawable/search"/>
            <ImageView
                android:id="@+id/qr"
                android:contentDescription="@string/open_by_qr_code"
                android:src="@drawable/camera"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="10dp"/>
            <ImageView
                android:id="@+id/nfc"
                android:contentDescription="@string/open_by_nfc"
                android:src="@drawable/nfc"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="10dp"
                android:visibility="gone"/>
        </LinearLayout>
    </com.google.android.material.appbar.MaterialToolbar>

    <androidx.recyclerview.widget.RecyclerView
        android:background="@drawable/top"
        android:id="@+id/results"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="4dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
</LinearLayout>