<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.ItemFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/item_name"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@drawable/top"
            android:gravity="center"
            android:text=""
            android:textSize="20sp" />

        <ImageView
            android:id="@+id/back"
            android:contentDescription="@string/back"
            android:src="@drawable/arrow_back"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_margin="10dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="30dp"
            android:layout_weight="16"
            android:orientation="vertical"
            android:padding="10dp">

            <com.google.android.material.textfield.TextInputLayout
                style="@style/HomeStorage.TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_marginVertical="20dp"
                android:hint="@string/item_name"
                app:endIconMode="clear_text">

                <EditText
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:ems="10"
                    android:enabled="false"
                    android:importantForAutofill="no"
                    android:inputType="text"
                    android:padding="10dp"
                    android:textSize="20sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginVertical="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:inputType="none"
                    android:text="@string/filters"
                    android:textSize="20sp"
                    app:layout_constraintStart_toStartOf="parent" />

                <ImageView
                    android:id="@+id/add_category"
                    android:layout_width="30dp"
                    android:layout_height="match_parent"
                    android:importantForAccessibility="no"
                    android:visibility="gone"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:srcCompat="@drawable/add" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:flexDirection="row"
                app:flexWrap="wrap"
                app:justifyContent="flex_start"
                app:layoutManager="com.google.android.flexbox.FlexboxLayoutManager" />
        </LinearLayout>
    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:contentDescription="@string/edit"
        android:src="@drawable/edit"
        app:tint="@null"
        app:backgroundTint="?colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.954"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.98" />
</androidx.constraintlayout.widget.ConstraintLayout>